Fix logo and dashboard spacing

--- a/app/assets/stylesheets/themes/home_2.css.sass
+++ b/app/assets/stylesheets/themes/home_2.css.sass
@@ -36,7 +36,7 @@
   #dashboard
     background-color: rgba(#ffffff, 1)
     position: absolute
-    top: 324px
+    top: 354px
     a[href='#close']
       display: none
 
@@ -137,6 +137,9 @@
 
   @media only screen and (min-width: 720px)
 
+    #dashboard
+      top: 324px
+
     #main
       &> article
         margin-top: 210px
@@ -169,8 +172,8 @@
         font:
           size: 90px
         &:before
-          margin-right: 0
-          vertical-align: 8px
+          margin-right: $text-indent
+          vertical-align: 11px
 
   // Screen > 1024px ////////////////////////////////////////////////////////////////////////////////////////////////////
 
